--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,15 @@
-<!DOCTYPE HTML>
+{% load staticfiles %}
 
+<!DOCTYPE HTML>
 <html>
 <head>
 	<meta charset="utf-8">
 
 	<title> Benny's Personal Updates </title>
 
+	<link rel="stylesheet" href="{% static 'libs/bootstrap/css/bootstrap.min.css' %}">
+	<link rel="stylesheet" href="{% static 'libs/bootstrap/css/bootstrap-theme.min.css' %}">
+	<link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 
 <body>
@@ -15,6 +19,8 @@
 
 		{% endblock %}
 	</div>
+	<script type="text/javascript" src="{% static 'libs/jquery/jquery-2.1.4.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'libs/bootstrap/js/bootstrap.min.js' %}"></script>
 </body>
 
 
