--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
 	</div>
 	<script type="text/javascript" src="{% static 'libs/jquery/jquery-2.1.4.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'libs/bootstrap/js/bootstrap.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/app.js' %}"></script>
 </body>
 
 
